metabase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase-staging
          image: metabase/metabase:latest
          ports:
            - containerPort: 3000
